[package]
name = "tools-utility"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true
description = "53 Taiwan-specific utility tools (ID validation, ROC year, address, etc.)"

[lints]
workspace = true

[dependencies]
# Lean deps: only what the current implementation actually compiles
# against. The next utility tool (#3.7 address, #3.8 ROC year, etc.)
# can add `thiserror`/`tracing`/etc. when it first needs them — keeping
# the dep list minimal makes future supply-chain audits cheap and
# avoids unused-dep noise in clippy.
async-trait = { workspace = true }
mcp-core = { path = "../mcp-core" }
regex = { workspace = true }
# Added in #6.9 batch A — geo helpers call OSM/Nominatim over HTTPS
# (json + rustls-tls + gzip inherited from the workspace pin are
# sufficient for the GET-only search/reverse endpoints).
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
# Async primitives for the geocode rate limiter (slot-based
# `Mutex<Instant>` so consecutive Nominatim calls respect the
# 1 req/s public-usage rule).
tokio = { workspace = true, features = ["sync", "time"] }

[dev-dependencies]
# Tests build their own runtime via `tokio::runtime::Builder` — we
# don't use `#[tokio::test]` here — so `macros` would be dead weight.
tokio = { workspace = true, features = ["rt"] }
