[package]
name = "tools-utility"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true
description = "53 Taiwan-specific utility tools (ID validation, ROC year, address, etc.)"

[lints]
workspace = true

[dependencies]
# Lean deps: only what the current implementation actually compiles
# against. The next utility tool (#3.7 address, #3.8 ROC year, etc.)
# can add `thiserror`/`tracing`/etc. when it first needs them — keeping
# the dep list minimal makes future supply-chain audits cheap and
# avoids unused-dep noise in clippy.
async-trait = { workspace = true }
# #6.10 batch B — encoders, hashers, IDs, text. Workspace already
# carries sha2 / hex / base64 / jsonwebtoken / chrono / uuid /
# ammonia (via auth + gateway). We add blake3 / ulid / slug as
# the new small focused deps the batch needs.
ammonia = { workspace = true }
base64 = { workspace = true }
blake3 = "1"
chrono = { workspace = true, features = ["clock", "std"] }
# Used by `time_convert_timezone` for IANA tz lookups. Already in
# the workspace dep graph via the existing date_tools utilities.
chrono-tz = "0.10"
hex = { workspace = true }
jsonwebtoken = { workspace = true }
mcp-core = { path = "../mcp-core" }
regex = { workspace = true }
sha2 = { workspace = true }
slug = "0.1"
# `std` feature pulls in `Ulid::new()` (uses SystemTime + rand);
# default-features = false would force callers to provide both
# manually. We're fine with the std assumption — `cargo test` and
# `tokio::runtime` already require std elsewhere in the crate.
ulid = "1"
url = { workspace = true }
uuid = { workspace = true }
# Added in #6.9 batch A — geo helpers call OSM/Nominatim over HTTPS
# (json + rustls-tls + gzip inherited from the workspace pin are
# sufficient for the GET-only search/reverse endpoints).
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
# Async primitives for the geocode rate limiter (slot-based
# `Mutex<Instant>` so consecutive Nominatim calls respect the
# 1 req/s public-usage rule).
tokio = { workspace = true, features = ["sync", "time"] }

[dev-dependencies]
# Tests build their own runtime via `tokio::runtime::Builder` — we
# don't use `#[tokio::test]` here — so `macros` would be dead weight.
tokio = { workspace = true, features = ["rt"] }
