[package]
name = "tools-utility"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true
description = "53 Taiwan-specific utility tools (ID validation, ROC year, address, etc.)"

[lints]
workspace = true

[dependencies]
# Lean deps: only what the current implementation actually compiles
# against. The next utility tool (#3.7 address, #3.8 ROC year, etc.)
# can add `thiserror`/`tracing`/etc. when it first needs them — keeping
# the dep list minimal makes future supply-chain audits cheap and
# avoids unused-dep noise in clippy.
async-trait = { workspace = true }
# #6.10 batch B — encoders, hashers, IDs, text. Workspace already
# carries sha2 / hex / base64 / chrono / uuid / ammonia (via auth
# + gateway / storage). We add blake3 / ulid / slug / chrono-tz
# as the new small focused deps the batch needs. (`jsonwebtoken`
# lives in workspace deps too but is intentionally NOT pulled
# into this crate — `decode_jwt_unverified` decodes the segments
# using base64 + serde directly because the tool's contract is
# explicitly "no signature verification".)
ammonia = { workspace = true }
base64 = { workspace = true }
blake3 = "1"
chrono = { workspace = true, features = ["clock", "std"] }
# `chrono-tz` is a new direct dep on this crate — first user is
# `time_convert_timezone` (the existing `date_tools` use chrono
# directly without IANA tz lookups). Kept here rather than in
# `[workspace.dependencies]` because tools-utility is currently
# the only crate that needs it; promote to workspace later if a
# second crate picks it up.
chrono-tz = "0.10"
hex = { workspace = true }
# #6.10 batch B follow-up — JSON Path (RFC 9535) + JSON Schema
# (draft 2020-12 default, 7 / 2019-09 selectable per request).
# Both are first-users in this crate; promote to
# `[workspace.dependencies]` later if a second crate picks them
# up. `default-features` is left enabled on `jsonschema` so the
# canonical format vocabulary (date-time, ipv4, email, regex,
# …) is available — most of the validator's value comes from
# those checks, and turning them off shrinks the binary by
# under 100 KiB.
jsonschema = "0.30"
mcp-core = { path = "../mcp-core" }
regex = { workspace = true }
serde_json_path = "0.7"
# #6.10 batch B follow-up — Big5 ↔ UTF-8 transcoding for the
# `transcode_big5_utf8` tool. `encoding_rs` is Mozilla's
# implementation of the WHATWG Encoding Standard (the same code
# Firefox uses for charset decoding); pinned to ≥ 0.8 for the
# `encode/decode` API stability and the `unmappable` reporting
# we use to flag lossy round-trips.
encoding_rs = "0.8"
sha2 = { workspace = true }
slug = "0.1"
# `std` feature pulls in `Ulid::new()` (uses SystemTime + rand);
# default-features = false would force callers to provide both
# manually. We're fine with the std assumption — `cargo test` and
# `tokio::runtime` already require std elsewhere in the crate.
ulid = "1"
uuid = { workspace = true }
# Added in #6.9 batch A — geo helpers call OSM/Nominatim over HTTPS
# (json + rustls-tls + gzip inherited from the workspace pin are
# sufficient for the GET-only search/reverse endpoints).
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
# Async primitives for the geocode rate limiter (slot-based
# `Mutex<Instant>` so consecutive Nominatim calls respect the
# 1 req/s public-usage rule).
tokio = { workspace = true, features = ["sync", "time"] }

[dev-dependencies]
# Tests build their own runtime via `tokio::runtime::Builder` — we
# don't use `#[tokio::test]` here — so `macros` would be dead weight.
tokio = { workspace = true, features = ["rt"] }
